--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                 <div class="buttons">
                     <button class="btn"><a
                             href="https://medium.com/backchannel/a-teenagers-view-on-social-media-1df945c09ac6"
-                            target="_blank">Social Media</a></button>
+                            target="_blank">Article 1</a></button>
                     <button class="btn"><a
                             href="https://medium.com/curious-cult/advice-from-30-year-old-me-to-20-year-old-me-b9b035d39e2d"
-                            target="_blank">Advice</a></button>
+                            target="_blank">Article 2</a></button>
                     <button class="btn"><a
                             href="https://medium.com/i-m-h-o/good-and-bad-reasons-to-become-an-entrepreneur-decf0766de8d"
-                            target="_blank">Entrepreneur</a></button>
+                            target="_blank">Article 3</a></button>
                 </div>
             </div>
         </div>
