--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="nav-list v">
             <div class="logo"><img src="./img/logo.png" alt="logo"></div>
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">About Me</a></li>
+            <li><a href="#about">About Us</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact Us</a></li>
         </ul>
@@ -40,7 +40,7 @@
             </div>
             <br> <br> <br>
             <div class="firstHalf">
-                <p class="text-big">Welcome to My Blog.</p>
+                <p class="text-big">Welcome to My Blog</p>
                 <p class="text-small">
                     Some of My aricles are listed below please go and check that and if you have any query please
                     contact us by given form or from our social media.
@@ -62,7 +62,7 @@
     <section class="bg">
         <section class="section">
             <div class="para">
-                <p class="Tag text-big" id="about">About Me</p>
+                <p class="Tag text-big" id="about">About Us</p>
                 <p class="SubTag text-small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam tempore qui
                     id corrupti ipsa
                     error saepe quod voluptatum ad, perferendis nihil sit, ratione ex laboriosam perspiciatis
