--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
     </section>
     <footer>
-        <div class="footer" id="contact">
+        <div class="footer background" id="contact">
             <div class="last1">Our Social Media Accounts Are Given Below</div>
             <div class="social nav-list">
                 <li><a href="#"><i class="fa fa-twitter-square"></i>Facebook</a></li>
