--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     aliquam
                     quis. </p>
             </div>
-            <div class="thumbnail"><img src="./img/about1.jpg" alt="My pic" class="img"></div>
+            <div class="thumbnail"><img src="./img/boy.jpg" alt="My pic" class="img"></div>
         </section>
         <section class="section left">
             <div class="para">
@@ -101,7 +101,7 @@
                     vel cum
                     tempora. </p>
             </div>
-            <div class="thumbnail"><img src="./img/me.jpg" alt="My pic" class="img"></div>
+            <div class="thumbnail"><img src="./img/robo.jpg" alt="My pic" class="img"></div>
         </section>
         <section class="section">
             <div class="para">
@@ -125,7 +125,7 @@
                     unde
                     nihil numquam enim. </p>
             </div>
-            <div class="thumbnail"><img src="./img/about2.jpg" alt="My pic" class="img"></div>
+            <div class="thumbnail"><img src="./img/grp.jpg" alt="My pic" class="img"></div>
         </section>
     </section>
     <section class="contact" id="services">
