--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                 <p class="Tag text-big" id="about">About Us</p>
                 <p class="SubTag text-small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam tempore qui
                     id corrupti ipsa
-                    error saepe quod voluptatum ad, perferendis nihil sit, ratione ex laboriosam perspiciatis
+                    error saepe quod voluptatum ad,<b> perferendis</b> nihil sit, ratione ex laboriosam perspiciatis
                     accusantium.
                     Debitis aspernatur maxime ipsum reiciendis dolor doloremque! Facere labore consequuntur modi
                     voluptate
-                    voluptas commodi maxime quaerat id quae! Nisi perferendis necessitatibus laboriosam iste ea modi
+                    voluptas commodi maxime quaerat id quae! Nisi perferendis <b> necessitatibus</b> laboriosam iste ea modi
                     animi
                     architecto quibusdam, corrupti non possimus quas magnam rerum ad sunt beatae illo nihil facere quasi
                     labore
@@ -91,7 +91,7 @@
                     accusantium.
                     Debitis aspernatur maxime ipsum reiciendis dolor doloremque! Facere labore consequuntur modi
                     voluptate
-                    voluptas commodi maxime quaerat id quae! Nisi perferendis necessitatibus laboriosam iste ea modi
+                    voluptas commodi maxime quaerat id quae! Nisi perferendis <b> necessitatibus</b> laboriosam iste ea modi
                     animi
                     architecto quibusdam, corrupti non possimus quas magnam rerum ad sunt beatae illo nihil facere quasi
                     labore
@@ -113,7 +113,7 @@
                     voluptate
                     voluptas commodi maxime quaerat id quae! Nisi perferendis necessitatibus laboriosam iste ea modi
                     animi
-                    architecto quibusdam, corrupti non possimus quas magnam rerum ad sunt beatae illo nihil facere quasi
+                    <b> architecto</b> quibusdam, corrupti non possimus quas magnam rerum ad sunt beatae illo nihil facere quasi
                     labore
                     praesentium quis temporibus delectus! Porro minima nostrum, ad officia quos laboriosam accusantium
                     sed
@@ -121,7 +121,7 @@
                     vel cum
                     tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi laborum nam doloremque
                     aliquam
-                    quis, molestias in quasi facere porro suscipit aut vitae exercitationem consequuntur aliquid tempore
+                    quis, molestias in quasi facere porro suscipit aut vitae <b> exercitationem</b> consequuntur aliquid tempore
                     unde
                     nihil numquam enim. </p>
             </div>
